# FastApiLikePosts

./: Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  setup.py
auth/: auth.py
controllers/: post_controller.py  reg_controller.py
db/: crud.py  models.py
models/: schemas.py
routers/: post_router.py  reg_router.py
