[tool.poetry]
name = "fastapilikeposts"
version = "0.1.0"
description = ""
authors = ["OneFallDen <onefallden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.19"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
psycopg2-binary = "^2.9.6"
email-validator = "^2.0.0.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
